--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -92,7 +92,7 @@ button {
     }
 }
 
-.amgen-logo {
+.company2-logo {
     position: absolute;
     bottom: 15px;
     right: 20px;
@@ -102,7 +102,7 @@ button {
     }
 }
 
-.myke-logo {
+.company1-logo {
     position: absolute;
     top: 10%;
     left: 50%;
@@ -276,10 +276,10 @@ button {
             }
         }
     }
-    .start-myke-container {
+    .start-company1-container {
         margin-top: -5%;
         width: 70%;
-        img#start-myke-logo {
+        img#start-company1-logo {
             width: 100%;
             height: auto;
         }
